[gd_scene load_steps=13 format=2]

[ext_resource path="res://gui/fonts/SourceHanSansHW-Regular.32.tres" type="DynamicFont" id=1]
[ext_resource path="res://gui/fonts/SourceHanSansHW-Regular.16.tres" type="DynamicFont" id=2]
[ext_resource path="res://gameplay/screen/options/options.gd" type="Script" id=3]
[ext_resource path="res://gui/button_theme.tres" type="Theme" id=4]
[ext_resource path="res://gui/normal_styleboxtexture.tres" type="StyleBox" id=5]
[ext_resource path="res://gui/pressed_styleboxtexture.tres" type="StyleBox" id=6]
[ext_resource path="res://gui/hoverd_styleboxtexture.tres" type="StyleBox" id=7]
[ext_resource path="res://gui/disabled_styleboxtexture.tres" type="StyleBox" id=8]
[ext_resource path="res://gui/checkbox_theme.tres" type="Theme" id=9]
[ext_resource path="res://gameplay/screen/bb_large.svg" type="Texture" id=10]

[sub_resource type="Theme" id=2]
default_font = ExtResource( 2 )
OptionButton/styles/disabled = ExtResource( 8 )
OptionButton/styles/focus = null
OptionButton/styles/hover = ExtResource( 7 )
OptionButton/styles/normal = ExtResource( 5 )
OptionButton/styles/pressed = ExtResource( 6 )

[sub_resource type="StyleBoxLine" id=3]
thickness = 4

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.862745, 0.862745, 0.862745, 1 )

[node name="Battleship" type="Sprite" parent="ColorRect"]
modulate = Color( 0.25098, 0.25098, 0.25098, 1 )
position = Vector2( 512, 584 )
scale = Vector2( 1.00312, 1 )
texture = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
margin_top = 664.0
margin_right = 1024.0
margin_bottom = 768.0
color = Color( 0.376471, 0.376471, 0.376471, 1 )

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 994.0
margin_bottom = 768.0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_right = 964.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 144.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = ":OPTIONS:"

[node name="Control" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 840.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="Return" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 844.0
margin_top = 7.0
margin_right = 964.0
margin_bottom = 41.0
rect_min_size = Vector2( 120, 0 )
focus_mode = 0
size_flags_vertical = 4
theme = ExtResource( 4 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = ":RETURN:"

[node name="HSeparator" type="HSeparator" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 964.0
margin_bottom = 56.0

[node name="Language" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 964.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Language"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = ":LANGUAGE:"

[node name="Control" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/Language"]
margin_left = 84.0
margin_right = 114.0
margin_bottom = 34.0
rect_min_size = Vector2( 30, 0 )

[node name="OptionButton" type="OptionButton" parent="ColorRect/MarginContainer/VBoxContainer/Language"]
margin_left = 118.0
margin_right = 218.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "日本語"
items = [ "日本語", null, false, 0, null, "English", null, false, 1, null ]
selected = 0

[node name="SoundVolume" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 964.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/SoundVolume"]
margin_right = 88.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = ":SE_VOLUME:"

[node name="Control" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/SoundVolume"]
margin_left = 92.0
margin_right = 122.0
margin_bottom = 24.0
rect_min_size = Vector2( 30, 0 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/MarginContainer/VBoxContainer/SoundVolume"]
margin_left = 126.0
margin_right = 590.0
margin_bottom = 24.0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/SoundVolume/CenterContainer"]
margin_top = 4.0
margin_right = 464.0
margin_bottom = 20.0

[node name="0" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/SoundVolume/CenterContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 20.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0%"

[node name="HSlider" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer/SoundVolume/CenterContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 424.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
custom_styles/slider = SubResource( 3 )
max_value = 200.0
value = 100.0

[node name="200" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/SoundVolume/CenterContainer/HBoxContainer"]
margin_left = 428.0
margin_top = 1.0
margin_right = 464.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "200%"

[node name="Control2" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/SoundVolume"]
margin_left = 594.0
margin_right = 624.0
margin_bottom = 24.0
rect_min_size = Vector2( 30, 0 )

[node name="CurrentVolume" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/SoundVolume"]
margin_left = 628.0
margin_right = 660.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "100%"

[node name="UseCursor" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 964.0
margin_bottom = 158.0

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/UseCursor"]
margin_top = 4.0
margin_right = 160.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = ":USE_DEFAULT_CURSOR:"

[node name="Control" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/UseCursor"]
margin_left = 164.0
margin_right = 194.0
margin_bottom = 32.0
rect_min_size = Vector2( 30, 0 )

[node name="CheckBox" type="CheckBox" parent="ColorRect/MarginContainer/VBoxContainer/UseCursor"]
margin_left = 198.0
margin_right = 230.0
margin_bottom = 32.0
focus_mode = 0
theme = ExtResource( 9 )
enabled_focus_mode = 0

[node name="ShowFps" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 964.0
margin_bottom = 194.0

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/ShowFps"]
margin_top = 4.0
margin_right = 80.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = ":SHOW_FPS:"

[node name="Control" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/ShowFps"]
margin_left = 84.0
margin_right = 114.0
margin_bottom = 32.0
rect_min_size = Vector2( 30, 0 )

[node name="CheckBox" type="CheckBox" parent="ColorRect/MarginContainer/VBoxContainer/ShowFps"]
margin_left = 118.0
margin_right = 150.0
margin_bottom = 32.0
focus_mode = 0
theme = ExtResource( 9 )
pressed = true
enabled_focus_mode = 0

[node name="Reset" type="CenterContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 964.0
margin_bottom = 232.0

[node name="Button" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/Reset"]
margin_left = 422.0
margin_right = 542.0
margin_bottom = 34.0
rect_min_size = Vector2( 120, 0 )
focus_mode = 0
theme = ExtResource( 4 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = ":RESET:"

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="item_selected" from="ColorRect/MarginContainer/VBoxContainer/Language/OptionButton" to="." method="_on_Language_item_selected"]
[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/SoundVolume/CenterContainer/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="ColorRect/MarginContainer/VBoxContainer/UseCursor/CheckBox" to="." method="_on_UseCursor_toggled"]
[connection signal="toggled" from="ColorRect/MarginContainer/VBoxContainer/ShowFps/CheckBox" to="." method="_on_ShowFps_toggled"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Reset/Button" to="." method="_on_Button_pressed"]
